[gd_scene load_steps=10 format=2]

[ext_resource path="res://src/mundo/niveles/ffaLevel.gd" type="Script" id=1]
[ext_resource path="res://src/mundo/props/contenedorJugadores.tscn" type="PackedScene" id=2]
[ext_resource path="res://src/mundo/jugador/meshRes/Material_002.material" type="Material" id=3]

[sub_resource type="SpatialMaterial" id=4]

[sub_resource type="SpatialMaterial" id=3]
albedo_color = Color( 0.203922, 0.0431373, 0.0431373, 1 )

[sub_resource type="SpatialMaterial" id=5]
albedo_color = Color( 0.301961, 0.0627451, 0.427451, 1 )

[sub_resource type="SpatialMaterial" id=6]
albedo_color = Color( 0, 0.0980392, 0.462745, 1 )

[sub_resource type="ProceduralSky" id=1]

[sub_resource type="Environment" id=2]
resource_local_to_scene = true
background_mode = 2
background_sky = SubResource( 1 )
tonemap_mode = 2
tonemap_white = 3.87
ss_reflections_enabled = true
ssao_enabled = true
ssao_radius = 2.0
ssao_intensity = 3.0
glow_enabled = true

[node name="Spatial" type="Spatial" groups=["wellcoming"]]
script = ExtResource( 1 )

[node name="CSGCombiner" type="CSGCombiner" parent="."]
material_override = ExtResource( 3 )
use_collision = true

[node name="CSGBox5" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -124.642, 5.80165, 0 )
material_override = SubResource( 4 )
height = 30.0
depth = 180.0

[node name="CSGBox3" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 7.66982, 78.4974 )
width = 250.0
height = 30.0
depth = 3.0

[node name="CSGBox" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.0190291, 0, 0 )
width = 250.0
height = 3.0
depth = 160.0

[node name="CSGBox2" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.02551, 4.73834, -79.9573 )
width = 250.0
height = 30.0
depth = 3.0

[node name="CSGBox4" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 123.299, 2.90083, 0 )
height = 30.0
depth = 180.0

[node name="CSGBox6" type="CSGBox" parent="CSGCombiner"]
transform = Transform( -0.261699, 0.257308, -0.930218, 0.567594, 0.820554, 0.0672921, 0.780609, -0.510376, -0.360785, 78.7161, -3.15081, -40.3439 )
width = 29.7576
height = 56.9907

[node name="CSGBox7" type="CSGBox" parent="CSGCombiner"]
transform = Transform( 0.445745, 0, -0.89516, 0, 1, 0, 0.89516, 0, 0.445745, -71.5261, 8.57774, -27.2792 )
material_override = SubResource( 3 )
width = 20.4262
height = 16.3631
depth = 48.0272

[node name="CSGBox" type="CSGBox" parent="CSGCombiner/CSGBox7"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.740623, -1.48861, 1.51929 )
operation = 2
width = 23.6239
height = 8.44032
depth = 49.4203

[node name="CSGCylinder2" type="CSGCylinder" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 121.834, 11.9138, 76.0657 )
height = 21.836

[node name="CSGCylinder3" type="CSGCylinder" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -122.691, 10.7687, 75.9119 )
height = 26.8353

[node name="CSGCylinder4" type="CSGCylinder" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 121.297, 11.9911, -77.7848 )
height = 22.1385

[node name="CSGCylinder5" type="CSGCylinder" parent="CSGCombiner"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -122.819, 10.6546, -77.3978 )
height = 20.3185

[node name="CSGCylinder" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 86.1786, 8.55401, 50.8538 )
material_override = SubResource( 5 )
use_collision = true
radius = 38.0593
height = 34.1929

[node name="CSGCylinder2" type="CSGCylinder" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -1.04614, 15.9819, 1.44979 )
material_override = SubResource( 6 )
use_collision = true
radius = 21.6424
height = 30.5466

[node name="CSGBox" type="CSGBox" parent="CSGCylinder2"]
operation = 2
width = 11.2885
height = 39.3537
depth = 52.2348

[node name="CSGBox2" type="CSGBox" parent="CSGCylinder2"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -0.783425, 0.81319, 1.47762 )
operation = 2
width = 47.0882
height = 30.7745
depth = 12.7561

[node name="Camera" type="Camera" parent="."]
transform = Transform( 1, 0, 0, 0, 0.0332599, 0.999447, 0, -0.999447, 0.0332599, 0, 84, -1 )
fov = 97.1

[node name="btnSalir" type="Button" parent="Camera"]
anchor_left = 0.288
anchor_top = 0.888
anchor_right = 0.288
anchor_bottom = 0.893
margin_left = 2.08798
margin_top = 0.199951
margin_right = 119.088
margin_bottom = 45.2
text = "Salir"

[node name="btnAparecer" type="Button" parent="Camera"]
anchor_left = 0.428
anchor_top = 0.887
anchor_right = 0.428
anchor_bottom = 0.887
margin_left = -0.272064
margin_top = -0.199951
margin_right = 110.728
margin_bottom = 53.8
text = "Aparecer"

[node name="playersContainer" parent="." instance=ExtResource( 2 )]

[node name="2" type="Position3D" parent="playersContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 31.3157, 0, 43.6966 )

[node name="1" type="Position3D" parent="playersContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 41.9591, 0, 0 )

[node name="3" type="Position3D" parent="playersContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -47.4061, 0, 0 )

[node name="4" type="Position3D" parent="playersContainer"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -5.05836, 0 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="DirectionalLight" type="DirectionalLight" parent="."]
transform = Transform( -0.203, -0.619, 0.758, 0, 0.775, 0.632, -0.979, 0.128, -0.157, -0.587, 0, 0 )
shadow_enabled = true
directional_shadow_max_distance = 200.0

[connection signal="pressed" from="Camera/btnSalir" to="." method="_on_btnSalir_pressed"]
[connection signal="pressed" from="Camera/btnAparecer" to="." method="_on_btnAparecer_pressed"]
